<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/al_ahly"
        android:layout_margin="16dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/al_ahly_sporting_club"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_branches"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_branches_name"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_media"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_live_tv_black_24dp"
        android:drawablePadding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_media_name"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_web"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_web_black_24dp"
        android:drawablePadding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_web_link"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"/>

</LinearLayout>